--- a/sample.html
+++ b/sample.html
@@ -51,68 +51,86 @@
 </ul>
 <p>
 <ul>
-<a href="#aplication"><li>APPLICATION</li></a>
+<a href="#aplication"><li>PROJECT MERIT</li></a>
  </ul>
+ <p>
+<ul>
+<a href="#rel"><li>RELEVANCE</li></a>
+ </ul>
+<p>
+<ul>
+<a href="#spe"><li>SPECIFICATION</li></a>
+ </ul>
+<p>
+<ul>
+<a href="#fea"><li>FEASIBILITY</li></a>
+ </ul>
+
 </div>
 
-<div id="contents2">
 
-<br>
-<br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/k0jOg9p1sl0" frameborder="0" allowfullscreen></iframe>
 <font size="5">
-
-
-
-
-
 </div>
 
 
 <div id="contents">
 <h1>PROJECT</h1>
-
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/k0jOg9p1sl0" frameborder="0" allowfullscreen></iframe></center>
 <h2 id="abstract1">ABSTRACT</h2>
 <p class="abstract1">
-Gold nano particles, which have specific optical activities, are applied to practical use in many filed. In this project, we focus on the property that this particle absorbs light of specific wave length. By using this, we design an optical filter that reduces ultraviolet rays. Under UV, gold nano particles spreaded on a surface of filter absorb UV partially and then passing UV interference each other. In two steps, this filter cuts UV. To accurately create an even distribution of particles, we use multiple rectangular DNA origamis from Rothemund et al.. DNA origamis have some single DNA strands on their surface to attach particles and they are bound to each other by ‘glue’ DNA. This optical filter is a material that both cuts UVs while being transparent at other wavelengths and may enable us to create novel transparent UV cut material, which could be used for contact lenses for instance.</p>
+Gold nanoparticles, which have specific optical properties, have concrete applications in many fields. In this project, we focus on the property that such particles absorb light at specific wave lengths. By using this, we design an optical filter that reduces ultraviolet rays. Gold nanoparticles spread on a surface of filter absorb UV partially and then passing UV interference each other. In two steps, this filter cuts UV. To accurately create an even distribution of particles, we use multiple rectangular DNA origamis from Rothemund et al.. DNA origamis are modified so that some staple strands are extended and can capture fictionalized gold nanoparticles (see Experiments). Other staple strands are designed to bind to other origamis with the help of a ‘glue’ DNA strand. This optical filter is a material that both cuts UVs while being transparent at other wavelengths and may enable us to create novel transparent UV cut material, which could be used for contact lenses for instance.</p>
 
-<h3>Relevance</h3>
-Our project is technologically interesting because:<br>
-<li>We controlled the distance of the gold nanoparticles (AuNPs) using DNA origami.</li>
-<li>It is possible to control the wavelength that is absorbed by AuNPs easily by changing the distance of them on the sheet.</li>
-<li>We created a large sheet by connecting small DNA origami (70nm x 100nm) via short glue sequence strands. This is a novel technology and has the potential to be applied in many fields.  </li>
-<br>
-Our project is scientifically interesting because:<br>
-<li>This UV absorbable DNA sheet is made of only DNA and AuNPs. Although the effect of gold nanoparticles upon our body is not clear yet, this simple structure has the potential to be applied directly on our skin or mucous membrane.</li>
+
 </p>
 <br>
 <h2 id="motivation">MOTIVATION</h2>
 <p class="motivation">
-It is known that gold nanoparticles absorb and interfere with specific lengths of lights based on its density and size.
+It is known that gold nanoparticles absorb and interfere with specific lengths of lights based on their density and size.
 <br>
 <p class="motivation">
-We initially started our project focusing on light reflection and set a goal to create a DNA solution that changes colors in a temperature dependant way. At first we thought of creating DNA sheets that reflect a specific length of light, and came up with the idea to attach gold particles on the surface of them. Then, these sheets are stacked on top of each other using DNA strands, and by adjusting the Tm value of each strand, we thought it would be possible to create a structure in which the sheets peel off one at a time when the temperature rises. However, we realized there was a problem; the DNA origami, which is the size of 70nm by 100nm, was not large enough to arrange the particles with sufficient distance. This is why we changed our project. We changed our focus to UV, and aimed to make a UV reflecting DNA sheet. 
+We initially started our project focusing on light reflection and decided a goal to create a DNA solution that changes colors in a temperature dependent way. At first we thought of creating DNA sheets that reflect a specific length of light, and came up with the idea to attach gold particles onto their surface of them. Then, these sheets are stacked on top of each other using DNA strands, and by adjusting the Tm value of each strand, we thought it would be possible to create a structure in which the sheets peel off one at a time when the temperature rises. However, we realized there was a problem; the DNA origami, which is the size of 70nm by 100nm, was not large enough to arrange the particles with sufficient distance. This is why we changed our project. That is why we changed our focus to UV, and aimed to make a UV reflecting DNA sheet. 
 <br>
 <p class="motivation">
-Why did we decide to focus on UV? Well, as you know, UV can be harmful depending on how much we get exposed to it. It damages our DNA and can cause mutations, which leads to errors in replication and transcription. In the worst case, this causes skin cancer. UV is also known to be harmful to our eyes. Excess exposure to UV is one of the factors of cataract and keratitis. 
+<b>Why did we decide to focus on UV? </b>Well, as you know, UV can be harmful depending on how much we get exposed to it. It damages our DNA and can cause mutations, which leads to errors in replication and transcription. In the worst case, this causes skin cancer. UV is also known to be harmful to our eyes. Excess exposure to UV is one of the factors of cataract and keratitis. 
 <br>
 <p class="motivation">
-In order to protect our skin cells from the damage of UV, melanin is produced in our skin. The color of this substance is what makes our skin darker when we get a suntan. The more sun we get, the more melanin is produced, and therefore, the more suntan we get. Japanese women are very careful about the color of their skin. Many of them do not like to tan their skin in the summer as many people in other countries do. There are many UV protecting goods in Japan, such as arm covers, portable parasols and broad-brimmed hats. We can say that Japanese woman, including us, are concerned about sunlight and UV to a great extent. 
-Since UV protection is such a familiar topic, we decided to choose it as our focus.
+In order to protect our skin cells from the damage of UV, melanin is produced in our skin. The color of this substance is what makes our skin darker when we get a suntan. The more sun we get, the more melanin is produced, and therefore, the more suntan we get.<b> Japanese women are very careful about the color of their skin. </b>Many of them do not like to tan their skin in the summer as many people in other countries do. There are many UV protecting goods in Japan, such as arm covers, portable parasols and broad-brimmed hats. We can say that Japanese woman, including us, are concerned about sunlight and UV to a great extent. <b>Since UV protection is such a familiar topic, we decided to choose it as our focus.</b>
 
 </p>
 <br>
-<h2 id=aplication>APPLICATION</h2>
+<h2 id=aplication>PROJECT MERIT</h2>
 <p class="aplication">
-This DNA based UV cutting sheet protects you from the harmful UV, and can be used for various situations. It can be used not only in the same way as other UV cutting materials, for instance, for windows, sun glasses and walls, but also in a new way. We propose an eye drop that prevents diseases caused by excess exposure to sunlight. By forming this sheet on our eye, we can protect the entirety of it, not only our pupil as previously developed UV-cut contact lenses do. In addition to this, there is a merit of it being transparent; therefore, it will not change the color of your field of vision. However, because the effect of gold nanoparticles on our human body hasn’t been studied well enough, there may be a long way to realization. That being said, if there is a substitution that has less effect on us than gold particles, this transparent UV cut sheet can be an innovative material.
+This DNA-based UV cutting sheet protects you from the harmful UV, and can be used for various situations. It can be used not only in the same way as other UV cutting materials, for instance, for windows, sun glasses and walls, but also in a new way. <b>We propose an eye drop</b> that prevents diseases caused by excess exposure to sunlight. By forming this sheet on our eye, we can protect the entirety of it, not only our pupil as previously developed UV-cut contact lenses do. This ultra violet cutting system is <font color="#FF0099">elegant</font> because it works without a risk of wounding eyeball like contact lens, and <font color="#FF0099">innovative </font>because it can cut ultra violet in the transparency state; therefore, it will not change the color of your field of vision. However, because the effect of gold nanoparticles on our human body hasn’t been studied well enough, there may be a long way to realization. <p>To realize this eye drop, we need to examine RNA that is more stable than DNA, or to research the effect of AuNPs for human body, and so on.  However, if there is a substitution that has less effect on us than gold particles, this transparent UV cut sheet can be an innovative material. And, our examination is the important first step.
 </p>
-<h3>Specification</h3>
-<p>The goal of this project is to make the solution that absorbs ultra violet specifically. In order to consider the project a success, the following criteria need to be met. <br>
-1. Based on the computer simulation results, the AuNP-attached DNA sheet absorbs ultra violet and that its absorbance is higher than other wavelengths.  <br>
-2. DNA sheet is ideally formed by connecting multiple origami with glue sequence strands.<br>
-3. AuNPs are attached to the sheet/origami in a specific arrangement that we designed.<br>
-4. AuNP-attached DNA sheet shows higher UV absorbance than the DNA sheet itself with the same concentration.<br>   
-</p>
+
+<h2 id="rel">RELEVANCE</h2>
+Our project is <font color="#FF0099">technologically interesting </font>because:
+<Li>We designed a simple way to create large organized patterns of gold nanoparticles (AuNPs).</li>
+<li>It is possible to control the wavelength that is absorbed by AuNPs easily by changing their pattern on the sheet.</li>
+<li>We created a large sheet by connecting small DNA origami (70nm x 100nm) via short glue sequence strands. This is a <font color="#FF0099">novel technology</font> and has<font color="#FF0099"> multiple potential applications</font>. For example, using this technology can make eye drops that create large sheets on the eyes.</li>
+<br>
+Our project is <font color="#FF0099">scientifically interesting</font> because:
+<li>This <font color="#FF0099">UV absorbent DNA sheet </font>is made of only DNA and AuNPs, and can easily<font color="#FF0099"> be applied directly on our skin or mucous membrane</font>.  Although the effect of gold nanoparticles upon our body is not clear yet, they can be replaced in the design as long as the UV cut pattern can be made.</li>
+
+
+
+<h2 id="spe">SPECIFICATION</h2>
+
+<p>The <font color="#FF0099"> goal </font>of this project is to  <font color="#FF0099">make a material that absorbs UV specifically</font>. In order to consider the project a success, the following criteria need to be met.</p>
+1. Based on the <font color="#FF0099"> computer simulation</font> results, the AuNP-attached DNA sheet absorbs ultra violet and that its absorbance is higher than other wavelengths. <br>
+2. DNA sheet is ideally formed by  <font color="#FF0099">connecting multiple origami</font> with glue sequence.<br>
+3. <font color="#FF0099"> AuNPs are attached </font>to the sheet/origami in a specific arrangement that we designed.<br>
+4.  <font color="#FF0099">AuNP-attached DNA sheet shows higher UV absorbance </font>than the DNA sheet itself with the same concentration.<br>
+ 
+<h2 id="fea">FEASIBILITY</h2>
+<h3>Selection of theme</h3>
+<p>Our first idea was to make an eye drop that was made of DNA sheet and can cut ultra violet. However, we thought it would need a lot of steps to put this idea into practice. Thus, for the first step of this project, we decided to do two basic researches mainly in this summer. The first aim was to attach AuNPs on DNA origami and form DNA sheet by connecting these DNA origamis each other. The second aim was to check whether this sheet had the effect of intercepting ultra violet. This theme was not engineering but scientific, so it suited for us because we major in science.</p>
+
+<h3>Support system</h3>
+<p>We are new face, but Dr. Nathanael Aubert-Kato, the super adviser, thoroughly supported us by using his specialized knowledge of DNA computing and the experience of coaching other BIOMOD team before. Thus, the graduate school of Ochanomizu University offered us expenses and facilities that was necessary for our experiments.</p>
+
+<p>This project was  <font color="#FF0099">feasible</font> because we chose  <font color="#FF0099">proper level and field of theme</font> and we could get  <font color="#FF0099">enough support</font>.</p>
+
 
 </div>
 </html>
