--- a/sample2.html
+++ b/sample2.html
@@ -70,13 +70,13 @@ Wave interference can be seen when rain drops fall into a pond, for example.
  
  Wave equation is given by the following;
  <br>
-<img src="./image/siki2.jpg" alt="サンプル" width="350px" height="55px">
+<img src="./image/siki2.jpg" alt="サンプル" width="320px" height="40px">
 <br>
 where f(x,t) is the magnitude of wave, k is wavenumber, x is the observation point, xo is generation point of wave, ω is angular frequency, and t is time. 
 <br>
 <p>
  The total displacement at a certain point is the sum of that of the individual waves. Therefore, the total magnitude is given by;
- <br>
+<br>
 <img src="./image/siki3.jpg" alt="サンプル" width="350px" height="55px">
 <br>
 where n is the number of wave generation points.
@@ -98,7 +98,7 @@ Where B is energy[W/m3], λ is wave length, h is Planck constant 6.626×10−34 
 
 <h2 id="chemical bond">GOLD SULFUR BOND</h2>
 <p class="">
-
+It is known that molecules contain thiol group are able to form SH-Au bonds on gold and make self-assembled monolayer. In our experiment, we use this self assembly to attach anchor oligo DNA on surface of gold nanoparticles via SH-modification site of anchor. <a href="#(1)"><sup>(1)</sup></a>
 </p>
 <p class="2">
 
@@ -106,7 +106,12 @@ Where B is energy[W/m3], λ is wave length, h is Planck constant 6.626×10−34 
 <p class="3">
 
 </p>
+
+<h2 id="reference">REFERENCE</h2>
+<a id="(1)">(1)</a>Häkkinen H. The gold-sulfur interface at the nanoscale. (2012) Nature Chemistry. 22;4(6):443-55.
+
 </div>
+
 <div id="sidebar">
 <td align="center">
 <ul>
@@ -119,6 +124,10 @@ Where B is energy[W/m3], λ is wave length, h is Planck constant 6.626×10−34 
 <p>
 <ul>
 <a href="#chemical bond" style="text-align : left"><li>GOLD SULFUR BOND</li></a>
+</ul>
+<p>
+<ul>
+<a href="#reference" style="text-align : left"><li>REFERENCE</li></a>
 </ul>
 </td>
 </div>
