--- a/sample5.html
+++ b/sample5.html
@@ -36,17 +36,11 @@
   </nav>
   
 </body>
- <div id="sidebar">
-<a href="#step1"font size="3" >STEP1</a>
-<a href="#step2">STEP2</a>
-<a href="#step3">STEP3</a>
-
-</div>
 
 <font size="5">
 <div id="sidebar">
 <ul>
-<a href="#aboutus"font size="3" ><li>ABOUT US</li></a>
+<a href="#aboutus"font size="3" ><li>OUR TEAM</li></a>
 </ul>
 <p>
 <ul>
@@ -65,7 +59,7 @@
 <font size="5">
 <div id="contents">
 <h1>ABOUT US</h>
-<h2 id="aboutus">ABOUT US</h2>
+<h2 id="aboutus">OUR TEAM</h2>
 <p class="aboutus">
 Our team was inaugurated last April, gathering students from various backgrounds, such as biology, chemistry and physics. None of us were familiar with biomolecular design, and we’ve launched this project from scratch. The idea of making an optical filter from DNA origami is the concentration of each member’s specialty, and our team successfully achieved to suggest a unique idea.
 
