--- a/sample7.html
+++ b/sample7.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
  
-  <title>SUPPLEMENTARY DATE</title>
+  <title>SUPPLEMENTARY DATA</title>
 
   
 
@@ -62,8 +62,7 @@
 <font size="5">
 <div id="contents">
 <h1>EXPERIMENT</h1>
-<h2>SUPPLEMENTARY DATE</h2>
-<br>
+<h2>SUPPLEMENTARY DATA</h2>
 <h3 id="step1">DNA origami</h3>
 <img src="./image/origami.jpg" alt="サンプル" width="800px" height="450px">
 <br>
