--- a/sample7.html
+++ b/sample7.html
@@ -64,7 +64,7 @@
 <h1>EXPERIMENT</h1>
 <h2>SUPPLEMENTARY DATA</h2>
 <h3 id="step1">DNA origami</h3>
-<img src="./image/origami.jpg" alt="サンプル" width="800px" height="450px">
+<img src="./image/12178974_1071840419502192_937735601_n.jpg" alt="サンプル" width="800px" height="450px">
 <br>
 <br>
 
