--- a/sample2.html
+++ b/sample2.html
@@ -38,7 +38,7 @@
 <h1>BACKGROUND</h1>
 <h2 id="motivation">DNA ORIGAMI</h2>
 <p class="origami">
-
+The first report that uses DNA as nano material is said to by a group of Nadrian Seeman, in 1982. In 1998,the same group has succeeded in making a two-dimensional sheet structure arranging a plurality of DNA molecules to the plane as raft. In 2006, Paul Rothemund succeeded in creating "DNA origami" made from a single very long DNA derived from natural virus and the short DNA. The frame is made with long DNA and the short DNA acts as a stapler, determing the shape as a whole. We can make various planar structures in this way. 
 </p>
 <p class="gold nano particle">
 <h2 id="gold particle">GOLD PARTICLE</h2> 
@@ -53,7 +53,10 @@ Here, we summarized the properties of gold nanoparticles that are involved in th
 <p>
 Gold nanoparticles absorb light of a specific wavelength depending on their size and density. This graph shows that UV light, a wave length from 300 to 400nm, is absorbed by gold particles. 
 </p>
-<img src="./image/gold_particle.jpg" alt="サンプル" width="800px" height="450px">
+<center><img src="./image/gold_particle.jpg" alt="サンプル" width="600px" height="338px">
+<br>
+Figure1. Absorption</center>
+
 
 <h3>Interference</h3>
 <p>
