--- a/sample3.html
+++ b/sample3.html
@@ -164,7 +164,7 @@ Table1. Mix reagents for PCR
 1. Dissolve SH-modified ahchor oligo DNA in 0.072M DTT for 1h at room &nbsp;&nbsp;&nbsp;&nbsp;temperature to remove the protective group.</li><br>
 2. Purify anchor oligo DNA by using NAP-5 column.</li><br>
 3. Dilute resulting solution with 10mM Tris-HCl pH7.0 and measure Abs at &nbsp;&nbsp;&nbsp;&nbsp;260 nm. (0.7Abs)</li><br>
-<li>Calculate the concentration by using the formulas below.</li>
+<li><b>Calculate the concentration </b>by using the formulas below.</li>
 <center>
 <i>0.7(Abs)×0.85×5=(2.975 OD) ⁄ 850μl=  (3.5 OD) ⁄ (1000μl )<br>
 3.5OD ⁄ 1000μl×35.1μg ⁄ OD=(122.85μg) ⁄ ml<br>
@@ -224,13 +224,7 @@ C<sub>n</sub>=(0.26(Abs)×1) / (10<sup>7</sup>×0.5)=0.52×10<sup>7</sup>M=<b>52
 
 2. 1μl sample were adsorbed on the mica sheet for 5min at room &nbsp;&nbsp;&nbsp;&nbsp;temperature and then add 50μl 1×TAE buffer.</li><br>
 3. <b>Get AFM images</b> using Multimode 8 (Bruker). </li><br>
-4. AFM probes ; SCANASYST-FLUID (Nitride Coated Silicon Tip on a Nitride &nbsp;&nbsp;&nbsp;&nbsp;Cantilever), SCANASYST-FLUID＋(Silicon Tip on Nitride Lever)</li><br>
-
-<h3>Method Ⅵ---Absorbance determination </h3>
-1. <b>Determine absorbance at 200-900nm </b>using V-630 UV VIS-Spectrophotometer (JASCO).</li><br>
-<li>Cuvette ;  5μl micro cell (stepped type)  (JASCO)</li>
-<br>
-<center>Table2. Sample solution 
+<center>Table2. AFM images</center>
 <style>
 table {
 	border-collapse: collapse;
@@ -245,10 +239,8 @@ td {
 	color: #000000;
 	background-color: #ffffff;
 }
-thead th {
-	background-color: #FF9999;
-}
 </style>
+<center>
 <table>
 	<thead>
 		<tr>
@@ -259,10 +251,10 @@ thead th {
 				<center>&nbsp;&nbsp;&nbsp;&nbsp;DNA origami&nbsp;&nbsp;&nbsp;&nbsp;</center>
 			</th>
 			<th>
-				<center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Glue DNA&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</center> 
+				<center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;glue DNA &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</center>
 			</th>
 			<th>
-				AuNP-Oligo DNA
+				<center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AuNP&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</center>
 			</th>
 		</tr>
 	</thead>
@@ -275,10 +267,10 @@ thead th {
 				<center>○</center>
 			</td>
 			<td>
-				<center>○</center>
+				<center>-</center>
 			</td>
 			<td>
-				<center>ー</center>
+				<center>-</center>
 			</td>
 		</tr>
 		<tr>
@@ -289,10 +281,10 @@ thead th {
 				<center>○</center>
 			</td>
 			<td>
-				<center>ー</center>
+				<center>○</center>
 			</td>
 			<td>
-				<center>○</center>
+				<center>-</center>
 			</td>
 		</tr>
 		<tr>
@@ -300,10 +292,124 @@ thead th {
 				<center>&nbsp;&nbsp;3&nbsp;&nbsp;</center>
 			</th>
 			<td>
-				<center>ー</center>
+				<center>○</center>
 			</td>
 			<td>
-				<center>ー</center>
+				<center>-</center>
+			</td>
+			<td>
+				<center>○</center>
+			</td>
+		</tr>
+	</tbody>
+</table>
+</center>
+<br>
+4. AFM probes ; SCANASYST-FLUID (Nitride Coated Silicon Tip on a Nitride &nbsp;&nbsp;&nbsp;&nbsp;Cantilever), SCANASYST-FLUID＋(Silicon Tip on Nitride Lever)</li><br>
+<br>
+<h3>Method Ⅵ---Absorbance determination </h3>
+1. <b>Determine absorbance at 200-900nm </b>using V-630 UV VIS-Spectrophotometer (JASCO).</li><br>
+<li>Cuvette ;  5μl micro cell (stepped type)  (JASCO)</li>
+<br>
+<center>Table3. Sample solution 
+<style>
+table {
+	border-collapse: collapse;
+}
+th {
+	border: solid 1px #666666;
+	color: #000000;
+	background-color: #ff9999;
+}
+td {
+	border: solid 1px #666666;
+	color: #000000;
+	background-color: #ffffff;
+}
+</style>
+<table>
+	<thead>
+		<tr>
+			<th>
+				
+			</th>
+			<th>
+				<center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DNA origami&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</center>
+			</th>
+			<th>
+				<center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;glue DNA &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</center>
+			</th>
+			<th>
+				<center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AuNP&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</center>
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<th>
+				<center>&nbsp;&nbsp;1&nbsp;&nbsp;</center>
+			</th>
+			<td>
+				<center>○</center>
+			</td>
+			<td>
+				<center>-</center>
+			</td>
+			<td>
+				<center>-</center>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				<center>&nbsp;&nbsp;2&nbsp;&nbsp;</center>
+			</th>
+			<td>
+				<center>○</center>
+			</td>
+			<td>
+				<center>○</center>
+			</td>
+			<td>
+				<center>-</center>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				<center>&nbsp;&nbsp;3&nbsp;&nbsp;</center>
+			</th>
+			<td>
+				<center>○</center>
+			</td>
+			<td>
+				<center>-</center>
+			</td>
+			<td>
+				<center>○</center>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				<center>&nbsp;&nbsp;4&nbsp;&nbsp;</center>
+			</th>
+			<td>
+				<center>-</center>
+			</td>
+			<td>
+				<center>-</center>
+			</td>
+			<td>
+				<center>○</center>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				<center>&nbsp;&nbsp5&nbsp;&nbsp;</center>
+			</th>
+			<td>
+				<center>○</center>
+			</td>
+			<td>
+				<center>○</center>
 			</td>
 			<td>
 				<center>○</center>
