--- a/sample4.html
+++ b/sample4.html
@@ -102,11 +102,11 @@ The detection and determination of AuNPs attached to sheet was not very easy. Th
 Absorption spectrum or the origami was measured with wavelength ranging from 200nm to 900nm (Fig 4).
 </p>
 <center>
-a.<img src="./image/AFM8.jpg" alt="サンプル" width="246px" height="261px">
-b.<img src="./image/AFM9.jpg" alt="サンプル" width="246px" height="261px">
-c.<img src="./image/AFM10.jpg" alt="サンプル" width="246px" height="261px">
-d.<img src="./image/AFM11.jpg" alt="サンプル" width="246px" height="261px">
-e.<img src="./image/AFM12.jpg" alt="サンプル" width="246px" height="261px">
+a.<img src="./image/p1.jpg" alt="サンプル" width="246px" height="261px">
+b.<img src="./image/p2.jpg" alt="サンプル" width="246px" height="261px">
+c.<img src="./image/p3.jpg" alt="サンプル" width="246px" height="261px">
+d.<img src="./image/p4.jpg" alt="サンプル" width="246px" height="261px">
+e.<img src="./image/p5.jpg" alt="サンプル" width="246px" height="261px">
 </center>
 <center2>
 Figure 4. Difference of absorption spectrum (200nm~900nm) of origami when glue sequence strands or AuNPs are added. a, Spectrum of origami itself. Note this solution was prepared by two fold dilution; therefore, the actual absorbance is twice as much as the value stated in the graph. b, Spectrum of origami when glue strands were added. c, Spectrum of origami when gold nanoparticles (AuNP-oligo DNA conjugates) were added. d, Spectrum of gold nanoparticles itself. e, Spectrum of origami with both glue sequence strands and AuNPs.</center2>
