--- a/sample3.html
+++ b/sample3.html
@@ -224,7 +224,7 @@ C<sub>n</sub>=(0.26(Abs)×1) / (10<sup>7</sup>×0.5)=0.52×10<sup>7</sup>M=<b>52
 
 2. 1μl sample were adsorbed on the mica sheet for 5min at room &nbsp;&nbsp;&nbsp;&nbsp;temperature and then add 50μl 1×TAE buffer.</li><br>
 3. <b>Get AFM images</b> using Multimode 8 (Bruker). </li><br>
-<center>Table2. AFM images</center>
+<center>Table2. Sample solution for AFM</center>
 <style>
 table {
 	border-collapse: collapse;
@@ -311,7 +311,7 @@ td {
 1. <b>Determine absorbance at 200-900nm </b>using V-630 UV VIS-Spectrophotometer (JASCO).</li><br>
 <li>Cuvette ;  5μl micro cell (stepped type)  (JASCO)</li>
 <br>
-<center>Table3. Sample solution 
+<center>Table3. Sample solution for absorbance measurement 
 <style>
 table {
 	border-collapse: collapse;
